# halide_testbed

./: .gitmodules  CMakeLists.txt  build.sh
test/: CMakeLists.txt  add.cpp  halving_add.cpp  test.cpp
